@@ -28,7 +28,7 @@ public class RecommendItemService {
                 .map(entry -> {
                     List<RecommendItemResponseDto.RecommendItemDto> recommendItemDtos = entry.getValue().stream()
                             .map(RecommendItemResponseDto.RecommendItemDto::item)
-                            .collect(Collectors.toList());
+                            .toList();
 
                     RecommendItemQueryDto itemQueryDto = entry.getValue().get(0);
                     RecommendItemResponseDto responseDto = new RecommendItemResponseDto();
